--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Chrome Extension</title>
+  <link rel="stylesheet" href="dist/output.css">
 </head>
+
 <body>
-  <h1>Hello Chrome Extension!</h1>
-  <p>This is a basic popup page for testing.</p>
-  <button id="testButton">Click Me</button>
+  <div class="p-4 text-center">
+    <h1>Hello Chrome Extension!</h1>
+    <p class="mb-4">This is a basic popup page for testing.</p>
+    <button id="testButton" class="bg-blue-100">Click Me</button>
+  </div>
 
   <script src="popup.js"></script>
 </body>
+
 </html>
