--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="p-4 text-center">
-    <h1>Hello Chrome Extension!</h1>
+    <h1>Hello Chrome Extension</h1>
     <p class="mb-4">This is a basic popup page for testing.</p>
     <button id="testButton" class="bg-blue-100">Click Me</button>
   </div>
