Install react and ESLint.

--- a/popup.html
+++ b/popup.html
@@ -8,12 +8,7 @@
   </head>
 
   <body>
-    <div class="p-4 text-center">
-      <h1>Hello Chrome Extension</h1>
-      <p class="mb-4">This is a basic popup page for testing.</p>
-      <button id="testButton" class="bg-blue-100">Click Me</button>
-    </div>
-
-    <script src="popup.js"></script>
+    <div id="root"></div>
+    <script src="dist/popup.js"></script>
   </body>
 </html>
